compiler/e2e/test/snapshot/ir/expression/phantom/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mismatched types: expected `int32`, found `phantom {any}`
   ╭─ compiler/e2e/test/snapshot/ir/expression/phantom/main.pnx:11:21
   │
11 │         notPhantom: phantom,   # not fine
   │                     ^^^^^^^ expected `int32`, found `phantom {any}`
   │
   = ensure the expression type matches the expected type

error: Compilation aborted due to 1 error(s)



stdout:
